Closed Bug 219819 Opened 22 years ago Closed 22 years ago

.nodeValue shouldn't throw NO_MODIFICATION_ALLOWED_ERR for documents and elements

Categories

(Core :: DOM: Core & HTML, defect, P4)

defect

Tracking

()

RESOLVED FIXED
mozilla1.6alpha

People

(Reporter: peterv, Assigned: peterv)

Details

Attachments

(1 file)

Status: NEW → ASSIGNED
OS: MacOS X → All
Priority: -- → P4
Target Milestone: --- → mozilla1.6alpha
Attached patch v1Splinter Review
Attachment #131820 - Flags: superreview?(jst)
Attachment #131820 - Flags: review?(jst)
Comment on attachment 131820 [details] [diff] [review] v1 + // The DOM spec says that when nodeValue is defined to be null "setting it + // has no effect", so we don't throw. I'd add "an exception" to the end of that sentence in all places. r+sr=jst
Attachment #131820 - Flags: superreview?(jst)
Attachment #131820 - Flags: superreview+
Attachment #131820 - Flags: review?(jst)
Attachment #131820 - Flags: review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: DOM: Core → DOM: Core & HTML
QA Contact: ian → general
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: