Fix for bug 219819 (.nodeValue shouldn't throw NO_MODIFICATION_ALLOWED_ERR for documents and elements). r/sr=jst.