content/svg/content/src/nsSVGElement.cpp
@@ -462,14 +462,17 @@ nsSVGElement::GetNodeName(nsAString& aNodeName)
 NS_IMETHODIMP
 nsSVGElement::GetNodeValue(nsAString& aNodeValue)
 {
-  aNodeValue.Truncate();
+  SetDOMStringToNull(aNodeValue);
+
   return NS_OK;
 }
 
 NS_IMETHODIMP
 nsSVGElement::SetNodeValue(const nsAString& aNodeValue)
 {
-  return NS_ERROR_DOM_NO_MODIFICATION_ALLOWED_ERR;
+  // The DOM spec says that when nodeValue is defined to be null "setting it
+  // has no effect", so we don't throw an exception.
+  return NS_OK;
 }
 
 NS_IMETHODIMP
